...
                                    .foregroundColor(.green)
                            }
                        }
                    }
                    .onDelete { viewStore.send(.delete($0)) }
                }
                .navigationTitle("My Habits")
                .toolbar {
                    ToolbarItem(placement: .navigationBarTrailing) {
                        Button {
                            viewStore.send(.addButtonTapped)
                        } label: {
                            Image(systemName: "plus")
                        }
                    }
                }
                .onAppear { viewStore.send(.onAppear) }
                .sheet(
                    store: store.scope(state: \.$addHabit, action: \.addHabit)
...
